Fixed: Allow Diva toolbar to adjust in fullscreen mode
Make the Diva toolbar adjustable-width in fullscreen mode, preventing its contents from overflowing.

Refs #181

--- a/public/cantusdata/frontend/public/css/styles.scss
+++ b/public/cantusdata/frontend/public/css/styles.scss
@@ -253,7 +253,8 @@ table.result-list th a {
 }
 
 .diva-tools.diva-fullscreen-tools {
-    width: 260px;
+    width: auto;
+    min-width: 260px;
     height: 120px;
     padding: 10px;
 
